--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ h2 {
   font-weight: 600;
 }
 
+h3 {
+  text-align: center;
+  font-weight: 500;
+}
+
 p {
   font-size: 1.5rem;
   padding: 1rem;
@@ -73,7 +78,7 @@ main .match {
   transition: opacity 0.5s ease-in 0.5s;
 }
 
-main .winner {
+main .status {
   text-align: center;
   font-size: 2.5rem;
 }
@@ -82,7 +87,7 @@ main .options,
 main .hands {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .player-hand {
@@ -97,4 +102,52 @@ main .hands {
 .fade-in {
   opacity: 1;
   pointer-events: all;
+}
+
+@keyframes player-hand-shake {
+  0% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+  15% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
+  30% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+  45% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
+  60% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+  75% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
+  100% {
+    transform: rotateY(180deg) translateY(0px);
+  }
+}
+
+@keyframes computer-hand-shake {
+  0% {
+    transform: translateY(0px);
+  }
+  15% {
+    transform: translateY(-50px);
+  }
+  30% {
+    transform: translateY(0px);
+  }
+  45% {
+    transform: translateY(-50px);
+  }
+  60% {
+    transform: translateY(0px);
+  }
+  75% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
